--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alm",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://qwetexac.github.io/alm-test/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -31,18 +32,18 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version"
+    ],
+    "development": [
+      "last 1 chrome version"
     ]
   },
   "devDependencies": {
     "@types/resize-observer-browser": "^0.1.5",
-    "@types/styled-components": "^5.1.9"
+    "@types/styled-components": "^5.1.9",
+    "gh-pages": "^3.1.0"
   }
 }
